feat: vercel blob storage, razorpay webhooks, cron cleanup

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,14 @@ NEXT_PUBLIC_UPI_ID=merchant@upi
 # Price in INR (shown in QR code and order summary)
 NEXT_PUBLIC_PRICE=49
 
-# ── Optional: Payment verification webhook secret ──────────────────────────
-# If you implement real payment verification via a UPI payment gateway
-PAYMENT_WEBHOOK_SECRET=
+# ── Razorpay ───────────────────────────────────────────────────────────────
+# Get these from: https://dashboard.razorpay.com → Settings → API Keys
+RAZORPAY_KEY_ID=rzp_test_xxxxxxxxxxxx
+RAZORPAY_KEY_SECRET=your_key_secret_here
+
+# Get this from: Dashboard → Settings → Webhooks → Add Webhook → "Secret" field
+# Your webhook URL to paste there: https://yourdomain.com/api/webhook
+PAYMENT_WEBHOOK_SECRET=your_webhook_secret_here
 
 # ── Draft storage ──────────────────────────────────────────────────────────
 # Drafts are stored in ./.drafts by default.
