--- a/package.json
+++ b/package.json
@@ -3,25 +3,27 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev":   "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint":  "next lint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next":     "^14.2.0",
-    "react":    "^18.3.0",
-    "react-dom":"^18.3.0",
-    "pdf-lib":  "^1.17.1"
+    "@vercel/blob": "^2.2.0",
+    "next": "^14.2.0",
+    "pdf-lib": "^1.17.1",
+    "razorpay": "^2.9.2",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
-    "autoprefixer":          "^10.4.19",
-    "postcss":               "^8.4.38",
-    "tailwindcss":           "^3.4.4",
-    "@types/node":           "^20.14.0",
-    "@types/react":          "^18.3.3",
-    "@types/react-dom":      "^18.3.0",
-    "eslint":                "^8.57.0",
-    "eslint-config-next":    "14.2.0"
+    "@types/node": "^20.14.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
   }
 }
