--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/blob": "^2.2.0",
     "next": "^14.2.0",
     "pdf-lib": "^1.17.1",
+    "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
